# prefect-docker-poc

./: LICENCE  README.md
docker/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
docker/src/docker/: main.py
output/: output.txt
prefect-poc/: .env.sample  README.md  prefect.yaml  pyproject.toml
prefect-poc/src/prefect_poc/: __init__.py  run_docker.py
