[project]
name = "docker"
version = "0.1.0"
description = "Example docker program that writes to file"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.15.1",
    "loguru>=0.7.3",
]

[project.scripts]
write = "docker.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
